--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -1,6 +1,19 @@
 html
   head
     title sheenazien.xyz - #{title}
-    block scripts
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description', content='')
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+    style
+      include style.css
   body
-    block content
+    include nav.pug
+    .container
+      block content
+
+    block scripts
+      script
+        include app.js
+
