--- a/src/views/sheenazienadmin/layouts/nav.pug
+++ b/src/views/sheenazienadmin/layouts/nav.pug
@@ -1,4 +1,4 @@
-- let lists = [{name: 'Home', url: '/'}, {name: 'Blog', url: '/blog'}, {name: 'Portfolio', url: '/portfolio'}, {name:'toggle', url: '#', toggle: true}, {name: 'Diary Error', url: '/diary'}]
+- let lists = [{name: 'Blog', url: '/sheenazienadmin/blog'}, {name: 'Portfolio', url: '/sheenazienadmin/portfolio'}, {name:'toggle', url: '#', toggle: true}, {name: 'Diary Error', url: '/sheenazienadmin/diary'}, {name: 'File Manager', url: '/sheenazienadmin/diary'}]
 
 .topnav#myTopnav
   each item in lists
