--- a/src/views/sheenazienadmin/layouts/app.pug
+++ b/src/views/sheenazienadmin/layouts/app.pug
@@ -18,4 +18,5 @@ html
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js", integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM", crossorigin="anonymous")
     script
       include app.js
+    script(src="https://cdn.ckeditor.com/4.5.6/standard/ckeditor.js")
     block scripts
