--- a/src/views/blog/index.pug
+++ b/src/views/blog/index.pug
@@ -5,7 +5,7 @@ block content
     .list-blog
       h3
         a(href=`/blog/detail/${blog.slug}`)= blog.title
-      p #{blog.body.substring(0, 300)}
+      div !{blog.body.substring(0, 300)}
       .row
         h5 #{moment(blog.date)} |
         - let tags = blog.meta_keyword.split(", ")
