--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -4,7 +4,17 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(name='description', content='')
+    meta(name='keyword', content=`${meta_keyword}`)
+    meta(name='description', content=`${meta_description}`)
+
+    meta(name="author" content="sheenazien")
+    meta(property="og:description" content=`${meta_description}`)
+    meta(property="og:title" content=`${title}`)
+    meta(property="og:url" content=`${currentUrl}`)
+    meta(name="twitter:card" content="summary")
+    meta(name="twitter:site" content="@sheenazien")
+    meta(http-equiv="refresh" content="800")
+
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
     style
       include style.css
